Fri Apr 19 17:06:48 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/socket/extconf.rb: include <windows.h>, <winsock.h> on _WIN32.
	
Thu Apr 11 18:40:38 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (read_all): return "" if file.size == 0.

	* random.c (rand_init): add check for initstate(3).

	* configure.in: ditto.

Thu Apr 11 01:55:52 2002  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/cgi/session.rb: support for multipart form.

Wed Apr 10 17:30:19 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_obj_remove_instance_variable): raise NameError if
	  specified instance variable is not defined.

	* variable.c (generic_ivar_remove): modified to check ivar
	  existence.

Wed Apr 10 14:16:45 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* misc/ruby-mode.el (ruby-font-lock-keywords): fontify symbols for
	  unary operators and aset.

Sat Apr  6 02:04:49 2002  Guy Decoux  <ts@moulon.inra.fr>

	* class.c (rb_singleton_class): wrong condition; was creating
	  unnecessary singleton class.

Thu Apr  4 15:45:12 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* parse.y: avoid bison 1.34 warnings. add `;' at the end of a rule.

Thu Apr  4 01:08:23 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (int_step): step may be a float less than 1.

Wed Apr  3 01:54:10 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* ext/extmk.rb.in (enable_config): follow lib/mkmf.rb.

Mon Apr  1 10:56:40 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (match_setter): it's OK to assign nil to $~.

Fri Mar 29 20:21:58 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (create_makefile): default FLAGS to empty strings.

Fri Mar 29 16:36:52 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* lib/mkmf.rb (arg_config): should use Shellwords::shellwords like
	  ext/extmk.rb.in.

	* lib/mkmf.rb (enable_config): default had priority over command
	  line options and configure_args.
